# Catppuccin-Flavours

./: Cargo.toml  README.md  build.rs  default.nix  flake.nix
src/: cli.rs  colors.rs  config.rs  main.rs  render.rs  template.rs  themes.rs
templates/: bat.tera  fish.tera  fzf.tera  kitty.tera  lua.tera  obsidian.tera
themes/: catppuccin-frappe.toml  catppuccin-latte.toml  catppuccin-macchiato.toml  catppuccin-mocha.toml  kanagawa-wave.toml
