[package]
name = "catppuccin-flavours"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[[bin]]
name = "cfl"
path = "src/main.rs"


[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
phf = "0.12.1"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"

[build-dependencies]
phf_codegen = "0.12.1"
