[package]
name = "catppuccin-flavours"
description = "Theme generator from Catppuccin templates"
version = "0.1.0"
edition = "2024"
build = "build.rs"


[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
clap_complete = "4.5.55"
directories-next = "2.0.0"
lazy_static = "1.5.0"
phf = "0.12.1"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"
tera = { version = "1", default-features = false }
shellexpand = "3.1.1"
rayon = "1.10.0"

[build-dependencies]
phf_codegen = "0.12.1"
